--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ See README.md for full design intent and structure.
 <!-- Google Fonts: Playfair Display & Great Vibes -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Great+Vibes&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="top">
 
 <!-- Header: Name, Subheading, Navigation Menu -->
   <header class="calling-card" role="banner">
@@ -131,6 +131,12 @@ See README.md for full design intent and structure.
         </form>
     </section>
   </main>
+
+<!-- Back to Top Button -->
+<a href="#top" class="back-to-top" aria-label="Return to the top of the page">
+  <img src="assets/icons/Feather.svg" alt="Back to Top Feather Quill" class="quill-icon" />
+</a>
+
 
 <!-- 🌙 Footer -->
   <footer>
