Made updates to the portfolio website

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ Submission: PLP Academy Hackathon – July 2025 Cohort
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+  <!-- Font Awesome for Icons -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body id="top">
 
@@ -199,69 +201,152 @@ Submission: PLP Academy Hackathon – July 2025 Cohort
   <!-- Education -->
   <section id="education">
   <h2>Education</h2>
-
   <div class="education-cards">
-    <div class="education-card">
-      <h3>Jomo Kenyatta University of Agriculture & Technology</h3>
-      <p><em>BSc. Geospatial Information Science (Ongoing)</em></p>
-      <p>Specializing in spatial analytics, data visualization, and geospatial web applications.</p>
+
+    <!-- Card 1 -->
+    <div class="edu-card">
+      <!-- <div class="edu-header"> -->
+        <div class="edu-icon">
+          <img src="assets/icons/hat.png" alt="Education Icon">
+        </div>
+        <h3>BSc. Geospatial Information Science</h3>
+      <!-- </div> -->
+      <span class="edu-institution">Jomo Kenyatta University of Agriculture & Technology (JKUAT)</span>
+      <span class="edu-date">2021 – Present</span>
+      <p>Focus on spatial analytics, data visualization, and geospatial web applications.</p>
     </div>
 
-    <div class="education-card">
-      <h3>Emobilis Technology Institute</h3>
-      <p>Web Development Bootcamp – Python, Django, Bootstrap, and version control.</p>
+    <!-- Card 2 -->
+    <div class="edu-card">
+      <!-- <div class="edu-header"> -->
+        <div class="edu-icon">
+          <img src="assets/icons/code_brackets.png" alt="Education Icon">
+        </div>
+        <h3>Web Development Bootcamp</h3>
+      <!-- </div> -->
+      <span class="edu-institution">Emobilis Technology Institute</span>
+      <span class="edu-date">2024</span>
+      <p>Hands-on training with Python, Django, Bootstrap, and version control.</p>
     </div>
 
-    <div class="education-card">
-      <h3>Power Learn Project (PLP)</h3>
-      <p>Full-stack software development training with collaborative projects.</p>
+    <!-- Card 3 -->
+    <div class="edu-card">
+      <!-- <div class="edu-header"> -->
+        <div class="edu-icon">
+          <img src="assets/icons/layer.png" alt="Education Icon">
+        </div>
+        <h3>Full-Stack Training</h3>
+      <!-- </div> -->
+      <span class="edu-institution">Power Learn Project (PLP)</span>
+      <span class="edu-date">2025</span>
+      <p>Collaborative projects with focus on full-stack web applications.</p>
     </div>
+
   </div>
 
-  <div class="cta-container">
-    <a href="assets/Joy_CV.pdf" download class="cta-button" aria-label="Download Curriculum Vitae">
-      📄 Download My CV
-    </a>
+  <!-- CV Download -->
+  <div class="cv-download">
+    <p>If you'd like to see my complete journey, achievements, and project details, you can download my CV below.</p>
+    <a href="assets/Joy_CV.pdf" download class="cv-btn">Download My CV</a>
   </div>
 </section>
 
 
   <!-- Projects -->
   <section id="projects">
-    <h2>Projects</h2>
+  <h2>Projects</h2>
 
+  <div class="projects-grid">
+
+    <!-- Project 1 -->
     <article class="project-card">
       <h3>Event Management & Booking System</h3>
       <p>Platform for managing and booking events with ease and structure.</p>
-      <p><strong>Built with:</strong> Python, Django, MySQL</p>
-      <a href="https://github.com/Joychema/EventHub" target="_blank">View on GitHub</a>
+      <div class="tech-badges">
+        <span>Python</span>
+        <span>Django</span>
+        <span>MySQL</span>
+      </div>
+      <a href="https://github.com/Joychema/EventHub" target="_blank" class="code-btn">
+        <i class="fab fa-github"></i> Code
+      </a>
     </article>
 
+    <!-- Project 2 -->
     <article class="project-card">
       <h3>The Library App</h3>
       <p>Web application for managing book lending and borrowing.</p>
-      <p><strong>Built with:</strong> JavaScript, HTML, CSS</p>
-      <a href="https://github.com/Joychema/Library-Project" target="_blank">View the Code</a>
+      <div class="tech-badges">
+        <span>JavaScript</span>
+        <span>HTML</span>
+        <span>CSS</span>
+      </div>
+      <a href="https://github.com/Joychema/Library-Project" target="_blank" class="code-btn">
+        <i class="fab fa-github"></i> Code
+      </a>
     </article>
 
+    <!-- Project 3 -->
     <article class="project-card">
       <h3>The Portfolio Website</h3>
       <p>This personal site showcasing my skills and projects.</p>
-      <p><strong>Built with:</strong> HTML5, CSS3</p>
-      <a href="https://github.com/Joychema/regency-portfolio" target="_blank">View the Source</a>
+      <div class="tech-badges">
+        <span>HTML5</span>
+        <span>CSS3</span>
+      </div>
+      <a href="https://github.com/Joychema/regency-portfolio" target="_blank" class="code-btn">
+        <i class="fab fa-github"></i> Code
+      </a>
     </article>
-  </section>
+
+  </div>
+
+  <!-- Closing note + CTA -->
+  <div class="projects-footer">
+    <p>These projects showcase my journey as a developer and my commitment to creating quality solutions. Each project taught me valuable lessons and helped me grow.</p>
+    <a href="https://github.com/Joychema" target="_blank" class="view-all-btn">
+      <i class="fab fa-github"></i> View All Projects on GitHub
+    </a>
+  </div>
+</section>
+
 
   <!-- Interests -->
   <section id="interests">
-    <h2>Interests</h2>
-    <ul class="interest-list">
-      <li><strong>Front-End Design:</strong> Creating user-focused, responsive interfaces.</li>
-      <li><strong>Open Source:</strong> Contributing to collaborative projects.</li>
-      <li><strong>Emerging Technologies:</strong> Data science, IoT, and GIS innovations.</li>
-      <li><strong>Web Applications:</strong> Functional, efficient, and engaging solutions.</li>
-    </ul>
-  </section>
+  <h2>What Excites Me About Tech</h2>
+  <div class="interests-grid">
+    <div class="interest-card">
+      <div class="interest-header">
+        <span class="icon">
+          <img src="assets/icons/programming.png" alt="Full-Stack Icon">
+        </span>
+        <h3>Full-Stack Development</h3>
+      </div>
+      <p>Passionate about building robust web applications and crafting user-focused, responsive interfaces.</p>
+    </div>
+
+    <div class="interest-card">
+      <div class="interest-header">
+        <span class="icon">
+          <img src="assets/icons/earth_globe.png" alt="GIS Icon">
+        </span>
+        <h3>Emerging Technologies</h3>
+      </div>
+      <p>Driven to explore innovations in GIS, data science, and IoT to create new solutions</p>
+    </div>
+
+    <div class="interest-card">
+      <div class="interest-header">
+        <span class="icon">
+          <img src="assets/icons/social-care.png" alt="Community Icon">
+        </span>
+        <h3>Community & Open Source</h3>
+      </div>
+      <p>Eager to contribute to open-source projects and collaborate with peers to solve complex challenges</p>
+    </div>
+  </div>
+</section>
+
 
   <!-- Contact -->
   <section id="contact">
