--- a/thank-you.html
+++ b/thank-you.html
@@ -59,7 +59,9 @@
 </head>
 <body>
   <div class="thank-you-container">
-    <div class="thank-you-icon">🎉</div>
+    <div class="thank-you-icon">
+      <img src="assets/icons/give-heart.png" alt="Thank You Icon">
+    </div>
     <h1>Thank You!</h1>
     <p>Your message has been sent successfully.<br>
     I appreciate your interest and will get back to you soon.</p>
