--- a/thank-you.html
+++ b/thank-you.html
@@ -50,7 +50,10 @@
     .thank-you-container a:hover {
       background: #7c4d4d;
     }
-    .thank-you-icon {
+    .thank-you-icon img {
+      width: 1.5rem;
+      height: 1.5rem;
+      display: block;
       font-size: 3rem;
       margin-bottom: 1rem;
       color: #A26769;
