--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@ Submission: PLP Academy Hackathon – July 2025 Cohort
   <div class="about-text">
     <h2>About Me</h2>
     <ul class="about-list">
-      <li><strong>Profession:</strong> Aspiring GIS Developer and Software Developer, creating solutions that connect people, places, and technology.</li>
-      <li><strong>Strengths:</strong> Balancing clean design with efficient code — where form meets function.</li>
-      <li><strong>Mindset:</strong> Driven by clarity, purpose, and the pursuit of excellence.</li>
-      <li><strong>Approach:</strong> Always learning, adapting, and refining my craft.</li>
+      <li><strong>Profession:</strong>  Aspiring GIS Developer and Software Developer, creating solutions that connect people, places, and technology.</li>
+      <li><strong>Strengths:</strong> Building efficient, functional applications with clean, user-centric design.</li>
+      <li><strong>Mindset:</strong> Driven by purpose, continuous learning, and a commitment to excellence.</li>
+      <li><strong>Approach:</strong>  Passionate about learning, adapting to new technologies, and refining my craft.</li>
     </ul>
 
     <div class="stats-cards">
@@ -213,7 +213,7 @@ Submission: PLP Academy Hackathon – July 2025 Cohort
       <!-- </div> -->
       <span class="edu-institution">Jomo Kenyatta University of Agriculture & Technology (JKUAT)</span>
       <span class="edu-date">2021 – Present</span>
-      <p>Focus on spatial analytics, data visualization, and geospatial web applications.</p>
+      <p>Spatial Analytics, Data Visualization and Geospatial Web Applications.</p>
     </div>
 
     <!-- Card 2 -->
@@ -226,7 +226,7 @@ Submission: PLP Academy Hackathon – July 2025 Cohort
       <!-- </div> -->
       <span class="edu-institution">Emobilis Technology Institute</span>
       <span class="edu-date">2024</span>
-      <p>Hands-on training with Python, Django, Bootstrap, and version control.</p>
+      <p>Hands-on experience with Python, Django, Bootstrap, and version control (Git).</p>
     </div>
 
     <!-- Card 3 -->
@@ -239,14 +239,14 @@ Submission: PLP Academy Hackathon – July 2025 Cohort
       <!-- </div> -->
       <span class="edu-institution">Power Learn Project (PLP)</span>
       <span class="edu-date">2025</span>
-      <p>Collaborative projects with focus on full-stack web applications.</p>
+      <p>Project-based learning with a focus on collaborative, full-stack web application development.</p>
     </div>
 
   </div>
 
   <!-- CV Download -->
   <div class="cv-download">
-    <p>If you'd like to see my complete journey, achievements, and project details, you can download my CV below.</p>
+    <p>For a complete overview of my experience, projects, and skills, please download my resume below.</p>
     <a href="assets/Joy_CV.pdf" download class="cv-btn">Download My CV</a>
   </div>
 </section>
@@ -261,7 +261,7 @@ Submission: PLP Academy Hackathon – July 2025 Cohort
     <!-- Project 1 -->
     <article class="project-card">
       <h3>Event Management & Booking System</h3>
-      <p>Platform for managing and booking events with ease and structure.</p>
+      <p>A full-stack application for efficient event management and booking.</p>
       <div class="tech-badges">
         <span>Python</span>
         <span>Django</span>
@@ -275,7 +275,7 @@ Submission: PLP Academy Hackathon – July 2025 Cohort
     <!-- Project 2 -->
     <article class="project-card">
       <h3>The Library App</h3>
-      <p>Web application for managing book lending and borrowing.</p>
+      <p>Developed a web application to streamline the process of book lending, borrowing, and inventory management.</p>
       <div class="tech-badges">
         <span>JavaScript</span>
         <span>HTML</span>
@@ -289,7 +289,7 @@ Submission: PLP Academy Hackathon – July 2025 Cohort
     <!-- Project 3 -->
     <article class="project-card">
       <h3>The Portfolio Website</h3>
-      <p>This personal site showcasing my skills and projects.</p>
+      <p>A personal site built to showcase my technical skills and professional projects.</p>
       <div class="tech-badges">
         <span>HTML5</span>
         <span>CSS3</span>
@@ -303,7 +303,9 @@ Submission: PLP Academy Hackathon – July 2025 Cohort
 
   <!-- Closing note + CTA -->
   <div class="projects-footer">
-    <p>These projects showcase my journey as a developer and my commitment to creating quality solutions. Each project taught me valuable lessons and helped me grow.</p>
+    <p>These projects highlight my commitment to creating quality solutions. 
+      Each one has been a valuable opportunity for professional growth and skill development.
+    </p>
     <a href="https://github.com/Joychema" target="_blank" class="view-all-btn">
       <i class="fab fa-github"></i> View All Projects on GitHub
     </a>
@@ -322,7 +324,7 @@ Submission: PLP Academy Hackathon – July 2025 Cohort
         </span>
         <h3>Full-Stack Development</h3>
       </div>
-      <p>Passionate about building robust web applications and crafting user-focused, responsive interfaces.</p>
+      <p>Passionate about building robust web applications and crafting clean, user-centric interfaces.</p>
     </div>
 
     <div class="interest-card">
@@ -332,7 +334,7 @@ Submission: PLP Academy Hackathon – July 2025 Cohort
         </span>
         <h3>Emerging Technologies</h3>
       </div>
-      <p>Driven to explore innovations in GIS, data science, and IoT to create new solutions</p>
+      <p>Driven to explore innovations in Geospatial Information Science (GIS), data science, and IoT to create powerful solutions.</p>
     </div>
 
     <div class="interest-card">
